@@ -3,6 +3,7 @@
 - Change: [#20790] Default ride price set to free if park charges for entry.
 - Fix: [#20737] Spent money in player window underflows when getting refunds.
 - Fix: [#20778] [Plugin] Incorrect target api when executing custom actions.
+- Fix: [#19722] “Forbid tree removal” restriction doesn't forbid removal of large scenery tree items.
 
 0.4.6 (2023-09-03)
 ------------------------------------------------------------------------
@@ -10,7 +11,7 @@
 - Feature: [#20680] New title sequences (https://github.com/OpenRCT2/title-sequences/releases/tag/v0.4.6).
 - Feature: [OpenMusic#41] Official Title Theme by Allister Brimble.
 - Improved: [#20119, #20243] Add new colour presets to several roller coasters (using the new colours).
-- Improved: [#20393, #20410] Add Cyrillic characters Ґґ, Ѕѕ, Єє, Іі, Її, and Јј to the sprite font. 
+- Improved: [#20393, #20410] Add Cyrillic characters Ґґ, Ѕѕ, Єє, Іі, Її, and Јј to the sprite font.
 - Change: [#19785] OpenMusic is now selected by default when opening SC4/SC6 - or creating new - scenarios.
 - Change: [#20110] Fix a few RCT1 build height parity discrepancies.
 - Change: [#20550] Change SEK conversion rate from 1 GBP to 0.1 GBP.
